methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
      if(!isFacingWall()){
        forward();
 
      if(x!=Color.green){
        backward();
      }
    }
}
        
        
        
     
      